# deshittify

./: .gitignore  Cargo.toml  build.sh  empty.db
src/: action.rs  action_handling.rs  challenge_data.rs  config.rs  main.rs  response.rs  task_handling.rs  time_frame.rs
src/database/: badge.rs  challenge.rs  challenge_performance_data.rs  group.rs  mod.rs  period.rs  task.rs  task_data.rs  task_performance_data.rs  user.rs  user_performance_data.rs
src/telegram/: command.rs  mod.rs  response_handling.rs
