[package]
name = "deshittify"
version = "0.1.0"
authors = ["tehforsch <Tonipeter92@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3.4"
teloxide-macros = "0.3"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rusqlite = { version = "0.24.2", features = ["chrono"] }
chrono = "0.4"
anyhow = "1.0.13"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros", "time"] }
lazy_static = "1.4.0"
itertools = "0.10.0"